--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,11 +4,15 @@ services:
   zookeeper:
     image: confluentinc/cp-zookeeper:7.2.1
     container_name: zookeeper
+    volumes:
+      - /kafka/data/zookeeper:/var/lib/confluent-control-center
     environment:
       ZOOKEEPER_CLIENT_PORT: 2181
   kafka1:
     image: confluentinc/cp-kafka:7.2.1
     container_name: kafka1
+    volumes:
+      - /kafka/data/kafka1:/var/lib/confluent-control-center
     ports:
       - "9094:9094"
     depends_on:
@@ -22,6 +26,8 @@ services:
   kafka2:
     image: confluentinc/cp-kafka:7.2.1
     container_name: kafka2
+    volumes:
+      - /kafka/data/kafka2:/var/lib/confluent-control-center
     ports:
       - "8098:8098"
     depends_on:
@@ -35,6 +41,8 @@ services:
   kafka3:
     image: confluentinc/cp-kafka:7.2.1
     container_name: kafka3
+    volumes:
+      - /kafka/data/kafka3:/var/lib/confluent-control-center
     ports:
       - "8099:8099"
     depends_on:
